# password-manager

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs
src/password_manager/: mod.rs
src/password_manager/data/: mod.rs
src/password_manager/encryption/: mod.rs
