[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
clap = { version = "4.0", features = ["derive"] }
pbkdf2 = "0.12.2"
rand = "0.8.4"
rpassword = "7.3.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sha2 = "0.10.8"
